--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -5,13 +5,16 @@
     display: flex;
     justify-content: space-between;
 }
+.footer_h6_span{
+    padding-left: 8px;
+}
 #footer_logo{
     padding-left: 10px;
     padding-right: 10px;
     height: 60px;
     width: 60px;
     margin-top: 10px;
-    padding-top: 7px;
+    padding-top: 12px;
     padding-bottom: 7px;
     border-radius: 10px;
     background-color: #2c2134;
@@ -62,9 +65,10 @@
  /* responsive download section */
  @media only screen and (max-width: 400px) {
     #footer_logo{
-     height: 40px;
+     height: 48px;
      width: 50px;
      margin-left: 15px;
+     padding-top: 10px;
 }
 .footer_logos_container{
     display: flex;
@@ -72,7 +76,9 @@
     padding-right: 0px;
     padding-top: 1px;
 }
+
 .footer_h6{
+    padding-top: 5px;
     padding-right: 10px ;   
     font-weight: 700;
     font-family: ProximaNova-Bold,Arial,Helvetica,sans-serif;
@@ -103,3 +109,253 @@
     color: #9a9a9a;
 }
   }
+  @media only screen and (max-width: 400px) {
+    .footer_h6{
+        padding-top: 5px;
+        padding-right: 10px ;   
+        font-weight: 700;
+        font-family: ProximaNova-Bold,Arial,Helvetica,sans-serif;
+        font-size: 11.5px;
+        padding-bottom: 3px;
+        color: #fff;
+        margin-left: 17px;
+        text-shadow: 1px 1px 1px white;
+    }
+ }
+
+ @media only screen and (max-width: 414px) {
+    #footer_logo{
+     height: 48px;
+     width: 50px;
+     margin-left: 15px;
+     padding-top: 10px;
+}
+.footer_logos_container{
+    display: flex;
+    flex-direction: column;
+    padding-right: 0px;
+    padding-top: 1px;
+}
+
+.footer_h6{
+    padding-top: 5px;
+    padding-right: 10px ;   
+    font-weight: 700;
+    font-family: ProximaNova-Bold,Arial,Helvetica,sans-serif;
+    font-size: 13.5px;
+    color: #fff;
+    margin-left: 17px;
+}
+.footer_h6_span{
+    display: none;
+}
+.footer_p{
+    font-size: 12px;
+    margin-left: 17px;
+}
+.footer_para_star{
+    margin-left: 17px;
+    font-size: 11px;
+    color: #f2f2f2;
+    font-weight: 600;
+}
+#footer_star{
+    padding-right: 3px;
+    color: #9a9a9a;
+}
+#footer_star1{
+    padding-right: 13px;
+    color: #9a9a9a;
+}
+  }
+  @media only screen and (max-width: 393px) {
+    .footer_h6{
+        padding-top: 5px;
+        padding-right: 10px ;   
+        font-weight: 700;
+        font-family: ProximaNova-Bold,Arial,Helvetica,sans-serif;
+        font-size: 11.5px;
+        color: #fff;
+        margin-left: 17px;
+    }
+  }
+  @media only screen and (max-width: 360px) {
+    .footer_h6{
+        padding-top: 5px;
+        padding-right: 10px ;   
+        font-weight: 700;
+        font-family: ProximaNova-Bold,Arial,Helvetica,sans-serif;
+        font-size: 10.5px;
+        color: #fff;
+        margin-left: 17px;
+    }
+    .footer_p{
+       font-size: 10.3px;
+    }
+  }
+  @media only screen and (max-width: 820px) {
+    #footer_logo{
+        height: 50px;
+        width: 55px;
+        margin-left: 15px;
+        padding-top: 10px;
+   }
+   .footer_logos_container{
+    padding-right: 20px;
+   }
+  }
+  @media only screen and (max-width: 768px) {
+    .footer_h6{
+        padding-top: 5px;
+        padding-right: 10px ;   
+        font-weight: 700;
+        font-family: ProximaNova-Bold,Arial,Helvetica,sans-serif;
+        font-size: 15.5px;
+        color: #fff;
+        margin-left: 17px;
+    }
+    .footer_p{
+       font-size: 14.3px;
+       margin-left: 17px;
+    }
+    .footer_para_star{
+        margin-left: 17px;
+       
+    }
+  }
+  @media only screen and (max-width: 540px) {
+    .footer_h6{
+        padding-top: 5px;
+        padding-right: 10px ;   
+        font-weight: 700;
+        font-family: ProximaNova-Bold,Arial,Helvetica,sans-serif;
+        font-size: 11.5px;
+        color: #fff;
+        margin-left: 17px;
+    }
+    .footer_p{
+      font-size: 11px;
+    }
+ .footer_logos_container{
+    display: flex;
+    flex-direction: column;
+    padding-right: 20px;
+    padding-top: 1px;
+   }
+  }
+  @media only screen and (max-width: 280px) {
+    #footer_logo{
+     height: 45px;
+     width: 50px;
+     margin-left: 15px;
+     padding-top: 10px;
+     margin-top: 15px;
+}
+.footer_logos_container{
+    display: flex;
+    flex-direction: column;
+    padding-right: 0px;
+    padding-top: 1px;
+}
+.footer_h6{
+    padding-top: 5px;
+    padding-right: 10px ;   
+    font-weight: 700;
+    font-size: 9px;
+    color: #fff;
+    margin-left: 14px;
+}
+.footer_h6_span{
+    display: none;
+}
+.footer_p{
+    font-size: 8px;
+    margin-left: 17px;
+}
+.footer_para_star{
+    margin-left: 17px;
+    font-size: 8px;
+    color: #f2f2f2;
+}
+#footer_star{
+    padding-right: 3px;
+    color: #9a9a9a;
+}
+#footer_star1{
+    padding-right: 13px;
+    color: #9a9a9a;
+}
+.footer_logos_container{
+   
+    padding-top: 10px;
+}
+  }
+
+  /* footer main content css start */
+  #footer_container{
+    padding-top: 40px;
+    padding-bottom: 30px;
+    background: #36263b;
+    color: #fff;
+    padding-left: 55px;
+ }
+ #footer_container_div{
+    padding-left: 55px;
+ }
+ .footer_container_div_h6{
+    padding: 0 0 1.6em 0;
+    font-size: 15px;
+    line-height: 18px;
+    font-weight: 700;
+    font-family: ProximaNova-Bold,Arial,Helvetica,sans-serif;
+ }
+ .footer_container_div_para{
+    margin-top: -13px;
+    font-size: 12px;
+    color: #e4e0e0;
+ }
+ .footer_container_div_para:hover{
+    color:rgb(145, 143, 143);
+    cursor: pointer;
+ }
+ .footer_flex{
+    display: flex;
+ }
+ /* responsive footer main content */
+ @media only screen and (max-width: 400px) {
+    #footer_container{
+        text-align: center;
+        padding-left: 0;
+    }
+    .footer_container_div_h6{
+        padding-top: 10px;
+    }
+ }
+ .footer_bottom{
+    display: flex;
+    justify-content: space-around;
+    background-color: #2c2134;
+ }
+ .footer_bottom_container{
+   padding: 30px 20px;
+ }
+ .footer_bottom_para{
+    text-align: center;
+ }
+ .footer_bottom_para1{
+   color: #9a9a9a;
+   font-size: 12px;
+}
+.footer_bottom_para2{
+    color: #fff;
+    font-size: 12px;
+    font-weight: 600;
+    margin-bottom: 6px;
+}
+ #footer_icon{
+    padding-left: 30px;
+    padding-bottom: 15px;
+    font-size: 23px;
+    font-weight: 500;
+    color: #fff;
+ }
