--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,6 @@
+body {
+  margin: 0px;
+}
 .sidenav {
   height: 100%;
   position: fixed;
@@ -40,15 +43,18 @@
   margin-left: 12px;
 }
 @media only screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+  .sidenav {
+    padding-top: 15px;
+  }
+  .sidenav a {
+    font-size: 18px;
+  }
 }
 @media only screen and (max-width: 768px) {
   .sidenav {
     display: block;
   }
-  .nav-item{
+  .nav-item {
     padding-left: 2rem;
   }
 }
-
