--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,54 +1,19 @@
-.sidenav {
-  height: 100%;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  right: 0;
-  background-color: #635b67;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-  display: none;
-}
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 20px;
-  font-size: 36px;
-  margin-left: 50px;
-  color: white;
-}
-.nav-link {
-  font-size: 15px;
-  line-height: 22px;
-  font-weight: 400;
-  align-items: center;
-  height: 44px;
-  padding: 12px 24px;
-  justify-content: space-between;
-  color: #fff;
-  flex-direction: row-reverse;
-  text-decoration: none;
-  display: block;
-  transition: 0.3s;
-}
+
 .hisar-biz {
-  width: 114px;
   font-size: 15px;
   line-height: 22px;
   font-weight: 400;
   margin-left: 12px;
 }
-@media only screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
-@media only screen and (max-width: 768px) {
-  .sidenav {
-    display: block;
-  }
-  .nav-item{
-    padding-left: 2rem;
-  }
-}
 
+.nav-link {
+  color: #fff;
+  text-decoration: none;
+  font-size: 14px;
+  cursor: pointer;
+  outline-color: transparent;
+  outline-style: none;
+  background-color: transparent;
+  text-align: left;
+
+}
