--- a/styles/GumTree.module.css
+++ b/styles/GumTree.module.css
@@ -45,9 +45,50 @@
     margin-top: -12px;
 }
 #container_main_select{
-background-color: #00000080;
-width: 90%;
-padding: 30px 5px;
+    background-color: #00000080;
+    width: 90%;
+    height: 125px;
+    padding: 30px 5px;
+    z-index: 1;
+}
+.select_ul{
+    background-color: #fff;
+    margin-left: 35px;
+    width: 130%;
+    padding: 16px 15px;
+    cursor: pointer;
+    font-size: 16px;
+    z-index: 1;
+    /* height: 300px;
+    overflow: auto;
+    scroll-behavior: smooth; */
+}
+#select_ul_icon{
+    padding: 0px 13px;
+    font-size: 18px;
+    color: #46db3c;
+}
+#select_ul_icon1{
+    padding: 0px 18px;
+    font-size: 25px;
+    color: #46db3c;
+}
+.select_ul_li1{
+    background-color: #fff;
+    width: 100%;
+    list-style: none;
+    padding: 5px 50px;
+}
+
+#ul_down_arrow{
+    float: right;
+    font-size: 20px;
+    cursor: pointer;
+}
+#ul_icon{
+    color: #46db3c;
+    font-size: 20px;
+    padding: 0px 10px;
 }
 .container_select{
     padding: 20px;
@@ -55,6 +96,24 @@ padding: 30px 5px;
     margin-left: 35px;
     outline: none;
     border: 1px solid rgb(226, 222, 222);
+}
+.container_select1{
+    padding: 19.7px 15px;
+    width: 100%;
+    margin-left: 35px;
+    outline: none;
+    font-size: 15px;
+    font-weight: 400;
+    text-align: start;
+    border: 1px solid rgb(226, 222, 222);
+}
+#dropdown{
+    float: right;
+}
+.container_select1 i{
+    color: #46db3c;
+    font-size: 20px;
+    padding: 0px 10px;
 }
 .container_select2{
     padding: 15px;
@@ -89,3 +148,51 @@ z-index: 1;
     
     text-align: center;
 }
+
+
+
+
+
+
+
+
+
+
+.dropbtn {
+    background-color: #3498DB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown_content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown_content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown a:hover {background-color: #ddd;}
+  
+  .show {display: block;}
