--- a/styles/Signup.module.css
+++ b/styles/Signup.module.css
@@ -47,7 +47,7 @@
 }
 #signup_icon {
   border: 1px solid #4267b2;
-  width: 250px;
+  /* width: 250px; */
   height: 47px;
   border-radius: 5px;
   padding-left: 5px;
@@ -73,7 +73,7 @@
 }
 #signup_icon11 {
   border: 1px solid #3367d6;
-  width: 250px;
+  /* width: 250px; */
   height: 47px;
   border-radius: 5px;
   margin-top: 12px;
@@ -111,9 +111,9 @@
   cursor: pointer;
   padding: 5px;
 }
-.main_inputs11 {
+/* .main_inputs11 {
   margin-left: 20px;
-}
+} */
 #signup_main {
   background-color: white;
   /* padding: 35px; */
