--- a/styles/Signup.module.css
+++ b/styles/Signup.module.css
@@ -155,9 +155,10 @@
   border-radius: 5px;
   margin-top: 10px;
 }
-/* #main_inputs {
-  padding-left: 5px;
-} */
+.formError {
+  color: red;
+  padding-left: 10px;
+}
 .already_registered {
   font-size: 14px;
   font-family: sans-serif;
