--- a/styles/GumTree.module.css
+++ b/styles/GumTree.module.css
@@ -51,6 +51,7 @@
     padding: 30px 5px;
     z-index: 1;
 }
+
 .select_ul{
     background-color: #fff;
     margin-left: 35px;
@@ -64,12 +65,12 @@
     scroll-behavior: smooth; */
 }
 #select_ul_icon{
-    padding: 0px 13px;
+    padding: 10px 0;
     font-size: 18px;
     color: #46db3c;
 }
 #select_ul_icon1{
-    padding: 0px 18px;
+    padding: 10px 0px;
     font-size: 25px;
     color: #46db3c;
 }
@@ -91,20 +92,11 @@
     padding: 0px 10px;
 }
 .container_select{
-    padding: 20px;
+    padding: 19.5px;
     width: 100%;
     margin-left: 35px;
     outline: none;
-    border: 1px solid rgb(226, 222, 222);
-}
-.container_select1{
-    padding: 19.7px 15px;
-    width: 100%;
-    margin-left: 35px;
-    outline: none;
-    font-size: 15px;
-    font-weight: 400;
-    text-align: start;
+    background-color: #fff;
     border: 1px solid rgb(226, 222, 222);
 }
 #dropdown{
@@ -139,60 +131,67 @@
    
 }
 .select_section_btn i{
-font-size: 20px;
-color: #fff;
-z-index: 1;
-}
-.container_option{
-    background-color: #3baa33;
-    
-    text-align: center;
-}
-
-
-
-
-
-
-
-
-
-
-.dropbtn {
-    background-color: #3498DB;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
-  }
-  
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dropdown_content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    font-size: 20px;
+    color: #fff;
     z-index: 1;
-  }
-  
-  .dropdown_content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown a:hover {background-color: #ddd;}
-  
-  .show {display: block;}
+}
+.hero{
+    width: 100%;
+    margin-left: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.selector{
+    width: 100%
+}
+#selectField{
+    width: 100%;
+    padding: 7.7px 20px;
+    box-sizing: border-box;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+}
+#list{
+    width: 150%;
+    background:#fff;
+    border-radius: 2px;
+    padding: 0px 20px;
+    overflow: hidden;
+}
+.options{
+    width: 100%;
+    display: flex;
+    list-style: none;
+    cursor: pointer;
+    box-sizing: border-box;
+}
+#search_icon{
+   color: #46db3c;
+   font-size: 20px;
+   padding-right: 20px;
+}
+#selectText{
+    padding: 8px 10px;
+    outline: none;
+    border: none;
+    width: 100%;
+    cursor: pointer;
+}
+#selectText1{
+    padding-top: 10px;
+    outline: none;
+    border: none;
+    width: 100%;
+}
+
+
+
+
+
+
+
+
